--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "type": "git",
     "url": "git+https://github.com/use-my-techstuff-2/Backend.git"
   },
-  "keywords": [],
+  "keywords": [
+    "heroku"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/use-my-techstuff-2/Backend#readme",
   "devDependencies": {
+    "cross-env": "^7.0.0",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
