--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --watch",
     "server": "nodemon index.js",
-    "build": "apidoc -i ./ -e node_modules -o ./docs",
+    "docs": "apidoc -i ./ -e node_modules -o ./docs",
     "start": "node index.js"
   },
   "repository": {
